--- a/public/dashbrew/src/less/dashboard/sidebar.less
+++ b/public/dashbrew/src/less/dashboard/sidebar.less
@@ -51,6 +51,7 @@ ul.sidebar {
         height: 35px;
         line-height: 40px;
         text-transform: uppercase;
+	    transition: all .6s ease 0s;
     }
     .sidebar-list {
         height: 40px;
@@ -80,7 +81,8 @@ ul.sidebar {
     ul.sidebar {
         bottom: 0;
         .sidebar-title {
-            display: none;
+	        height: 0px;
+	        text-indent: -100px;
         }
         .sidebar-title.separator {
             display: block;
