--- a/public/dashbrew/src/less/dashboard/main.less
+++ b/public/dashbrew/src/less/dashboard/main.less
@@ -26,7 +26,7 @@ html {
 body {
     background: #f3f3f3;
     font-family: "Montserrat", Trebuchet, Arial;
-    color: #333333 !important;
+    color: #555 !important;
 }
 .row {
     margin-left: 0 !important;
@@ -54,7 +54,7 @@ body {
     transition: all .4s ease 0s;
 }
 .green {
-    background: #23ae89 !important;
+    background: #90B64A !important;
 }
 .blue {
     background: #2361ae !important;
@@ -70,4 +70,7 @@ body {
 }
 div.input-mask {
     padding-top: 7px;
+}
+.label {
+	font-weight: normal;
 }
