--- a/public/dashbrew/src/less/dashboard/widgets.less
+++ b/public/dashbrew/src/less/dashboard/widgets.less
@@ -27,6 +27,8 @@
     }
     .widget-body {
         padding: 20px;
+	    min-height: 105px;
+	    position: relative;
         table {
             thead {
                 background: #fafafa;
@@ -67,6 +69,9 @@
             padding: 20px;
           }
         }
+	    .loading {
+		    top: -2px;
+	    }
     }
     .widget-footer {
       border-top: 1px solid #e9e9e9;
@@ -76,7 +81,7 @@
         background: #30426a;
         width: 65px;
         height: 65px;
-        border-radius: 50%;
+        border-radius: 5%;
         text-align: center;
         vertical-align: middle;
         margin-right: 15px;
