--- a/public/dashbrew/src/less/dashboard/loading.less
+++ b/public/dashbrew/src/less/dashboard/loading.less
@@ -1,40 +1,42 @@
 .loading {
-    width: 40px;
-    height: 40px;
-    position: relative;
-    margin: 100px auto;
-}
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	.line{
+		position: absolute;
+		background: #4775BE;
+		width: 100%;
+		height: 100%;
 
-.double-bounce1, .double-bounce2 {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: #333;
-    opacity: 0.6;
-    position: absolute;
-    top: 0;
-    left: 0;
+	}
+	.break{
+		position: absolute;
+		background: #fff;
+		width: 25px;
+		height: 100%;
+	}
 
-    -webkit-animation: bounce 2.0s infinite ease-in-out;
-    animation: bounce 2.0s infinite ease-in-out;
-}
+	.dot1{
+		animation: loading 2s infinite;
+	}
 
-.double-bounce2 {
-    -webkit-animation-delay: -1.0s;
-    animation-delay: -1.0s;
-}
+	.dot2 {
+		animation: loading 2s 0.5s infinite;
+	}
 
-@-webkit-keyframes bounce {
-    0%, 100% { -webkit-transform: scale(0.0) }
-    50% { -webkit-transform: scale(1.0) }
-}
+	.dot3 {
+		animation: loading 2s 1s infinite;
+	}
 
-@keyframes bounce {
-    0%, 100% {
-        transform: scale(0.0);
-        -webkit-transform: scale(0.0);
-    } 50% {
-        transform: scale(1.0);
-        -webkit-transform: scale(1.0);
-    }
+	@keyframes loading {
+		from {
+			left: 0;
+		}
+		to {
+			left: 100%;
+		}
+	}
 }
