--- a/public/dashbrew/src/less/dashboard/dashboard.less
+++ b/public/dashbrew/src/less/dashboard/dashboard.less
@@ -6,5 +6,7 @@
 @import "content.less";
 @import "header.less";
 @import "sidebar.less";
+@import "data.less";
+@import "modal.less";
 @import "widgets.less";
 @import "hamburg.less";
