Improved widget API

--- a/public/dashbrew/src/less/dashboard/widgets.less
+++ b/public/dashbrew/src/less/dashboard/widgets.less
@@ -27,6 +27,9 @@
         input {
             width: 30%;
         }
+	    .widget-btn-reload {
+		    float: right;
+	    }
     }
     .widget-body {
         padding: 20px;
